fixed font and alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: black;
     margin: 0em;
 } 
@@ -29,7 +29,6 @@ body {
     border-radius: 1em;
     width: 25em;
     margin: 0.5em;
-    text-align: center;
 
     box-sizing: border-box;
 
@@ -53,8 +52,9 @@ body {
     display: block;
     box-sizing: border-box;
     border-radius: 2em;
-    width: 50%;
+    width: 30%;
     height: auto;
+    text-align: center;
     
     margin-bottom: 1em;
 
@@ -80,6 +80,7 @@ body {
 
 .icons {
     width: 40px;
+    height: 40px;
 
 }
 
